# preconsol-gui

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  python-isort.yml
preconsol_gui/: app.py
preconsol_gui/app_modules/: __init__.py  preconsolidation_plot.py  process_ags.py
