[tool.poetry]
name = "preconsol-gui"
version = "0.1.0"
description = ""
authors = ["niko86 <287100+niko86@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "preconsol_gui"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
kneed = "^0.8.1"
pyside6 = "^6.4.1"
python-ags4 = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
